packages/core/src/components/application-header/application-header.scss
/*
 * SPDX-FileCopyrightText: 2023 Siemens AG
 *
 * SPDX-License-Identifier: MIT
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
@use 'mixins/shadow-dom/component';
@use 'mixins/break-points';

:host {
  display: flex;
  flex-wrap: nowrap;
  align-items: end;
  justify-content: space-between;
  position: relative;
  width: 100%;
  height: calc(3rem);
  min-height: calc(3rem);
  padding-top: var(--ix-safe-area-inset-top, 0rem);
  padding-right: calc(0.625rem + var(--ix-safe-area-inset-right, 0rem));
  padding-left: calc(0.625rem + var(--ix-safe-area-inset-left, 0rem));

  color: var(--theme-app-header--color);
  background-color: var(--theme-app-header--background);

  border-bottom: var(--theme-app-header--border-width) solid
    var(--theme-app-header--border-color);

  z-index: var(--theme-z-index-fixed);

  @include component.ix-component;

  .left-side,
  .right-side {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    position: relative;
    align-items: center;
    min-width: 0;
  }

  .left-side {
    flex: 0 1 auto;
    padding-bottom: 0.4375rem;

    .app-icon {
      display: block;
      position: relative;
      width: 2rem;
      min-width: 2rem;
      max-width: 2rem;
      height: 2rem;
      min-height: 2rem;
      max-height: 2rem;
    }

    .app-icon img {
      position: relative;
      display: block;
      width: 100%;
      height: 100%;
      border-radius: 0.125rem;
    }

    .app-switch {
      margin-right: 1rem;
      padding-bottom: 0.3rem;
    }

    .name {
      display: flex;
      position: relative;
      flex-direction: row;
      flex-wrap: nowrap;

      margin-left: 0.75rem;
      margin-right: 0.75rem;
      color: var(--theme-app-header--color);
      min-width: 4rem;

      gap: 0.75rem;
    }

    .application-name-suffix,
    .application-name {
      overflow: hidden;
      overflow-wrap: anywhere;
      text-overflow: ellipsis;
      text-wrap: nowrap;
    }

    .application-name-suffix {
      margin-top: 8px;
    }

    .logo {
      display: inline-flex;
      align-items: center;
      position: relative;
      height: 32px;
      overflow: hidden;
      line-height: 0rem;
      color: var(--theme-app-header-logo--color);
      margin-right: 1rem;
      margin-left: 1rem;
      min-width: fit-content;
    }
  }

  .right-side {
    height: 100%;
    flex: 1 1 auto;
    overflow: hidden;
    justify-content: space-between;

    .content,
    .secondary {
      display: flex;
      position: relative;
      align-items: center;
      justify-content: space-between;
      flex-direction: row;
      flex-wrap: nowrap;
      height: 100%;
    }

    .content {
      min-width: max-content;
    }

    .secondary {
      overflow: hidden;
    }

    .dropdown {
      overflow: visible;
    }

    .dropdown-content {
      padding: 1rem;
    }

    .dropdown-content .top {
    }

    .dropdown-content .divider {
      height: 1px;
      border: 1px solid var(--theme-color-x-weak-bdr);
      margin: 0.5rem 0px;
    }

    .dropdown-content .bottom {
    }

    .context-menu {
      display: none;
    }

    .context-menu.context-menu-visible {
      display: block;
    }

    ::slotted(ix-avatar) {
      margin-left: 1rem;
    }

    .primary-navigation {
      align-self: end;
    }
  }

  .right-side.sm {
    justify-content: end;
  }

  @include break-points.media-breakpoint-match('sm') {
    .logo {
      margin-left: 0.5rem;
      display: none;
    }

    .content,
    .secondary,
    .app-icon {
      display: none;
    }
  }
}

